--- a/style.css
+++ b/style.css
@@ -44,13 +44,19 @@ header a {
     color: white;
 }
 
+.ms_sidebar-inferiore {
+    padding-bottom: 25px;
+}
+
 .nav_superiore ul {
     list-style: none;
     margin-top: 20px;
 }
 
 .nav_superiore li {
-    margin-bottom: 10px;
+    padding: 10px;
+    margin-right: 30px;
+    cursor: pointer;
 }
 
 .nav_inferiore {
@@ -61,6 +67,10 @@ header a {
     text-decoration: none;
     padding-left: 5px;
     color: white;
+}
+
+.nav_superiore li:hover {
+    background-color: rgba(128, 128, 128, 0.433);
 }
 
 /* container centrale */
@@ -88,6 +98,7 @@ header a {
     margin: 10px;
     height: auto;
     border-radius: 10px;
+    width: 97%;
 }
 
 .ms_table img {
@@ -100,7 +111,26 @@ header a {
     border-radius: 10px;
 }
 
+.ms_todo_list {
+    border: 1px solid grey;
+    margin: 10px;
+    border-radius: 10px;
+    width: 30%;
+    height: 170px;
+}
 
+.ms_todo_list h2 {
+    border-bottom: 1px solid grey;
+    background-color: rgba(128, 128, 128, 0.134);
+    padding: 10px;
+}
+
+.checkbox_todo {
+    border: 1px solid grey;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 10px;
+}
 
 /* mobile version */
 
@@ -109,9 +139,6 @@ header a {
         width: 70px;
     }
 
-    .ms_sidebar span {
-        display: none;
-    }
 }
 
 
@@ -131,10 +158,20 @@ header a {
 
     #small-logo {
         display: block;
+        height: 50px;
     }
 
     #ring-icon {
         padding-right: 30px;
+    }
+
+    .ms_sidebar span {
+        display: none;
+    }
+
+    .ms_container_centrale {
+        display: flex;
+        flex-wrap: wrap;
     }
 
 }
