--- a/style.css
+++ b/style.css
@@ -6,168 +6,100 @@
     font-size: 12px;
 }
 
-/* nav-bar */
-
-header{
-    margin: 10px 0;
+th img {
+    width: 20px;
 }
 
-header a {
-    font-size: 30px;
+header {
+    padding: 10px;
 }
 
-#icon-header {
+.ms_icon_header {
     display: flex;
     justify-content: space-around;
+    padding-top: 10px;
 }
 
-#big-logo {
-    display: block;
-}
-
-#small-logo {
-    display: none;
-    max-width: 100%;
-
-}
-
-/* sidebar */
-
-.ms_sidebar {
-    width: 10vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-image: url(sidebar-bg.png);
-    background-color: rgba(5,30,52,255);
-    color: white;
-}
-
-.ms_sidebar-inferiore {
-    padding-bottom: 25px;
-}
-
-.nav_superiore ul {
-    list-style: none;
-    margin-top: 20px;
-}
-
-.nav_superiore li {
-    padding: 10px;
-    margin-right: 30px;
-    cursor: pointer;
-}
-
-.nav_inferiore {
-    padding-left: 30px;
-}
-
-.nav_inferiore a {
-    text-decoration: none;
-    padding-left: 5px;
-    color: white;
-}
-
-.nav_superiore li:hover {
-    background-color: rgba(128, 128, 128, 0.433);
-}
-
-/* container centrale */
-
-.ms_row_blu {
-    background-color: rgb(71, 71, 250);
-    color: white;
-    padding: 20px;
-}
-
-
-.ms_container_new {
-
+.col-lg-2 img {
+    width: 100%;
+    height: 40px;
 }
 
 .ms_container_new_stats img {
     width: 100%;
 }
 
-.container_centrale {
-    display: flex;
-    flex-grow: 1;
+section {
+    border: 1px solid grey;
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 7px;
 }
 
-.ms_container_new h2 {
-    border-bottom: 1px solid grey;
-    background-color: rgba(128, 128, 128, 0.134);
+section h2 {
+    border-bottom: 1px grey solid;
+    padding-bottom: 10px;
+}
+
+.ms_container_new_stats {
+    margin: 1px;
+    border: 1px grey solid;
+    border-radius: 7px;
     padding: 10px;
+}
+
+.ms_section_todo {
+    border: 1px solid grey;
+    margin: 2px;
+    padding: 10px;
+    border-radius: 7px;
+}
+
+.ms_section_todo .checkbox_todo {
+    border-bottom: 1px solid grey;
+    padding: 5px;
+}
+
+td a {
+    padding: 5px;
+    border: 1px solid rgba(128, 128, 128, 0.367);
+    border-radius: 5px;
+}
+
+.ms_row_blu {
+    background-color: rgb(69, 69, 255);
+    color: white;
+    padding: 20px;
+}
+
+p i {
+    margin-left: 10px;
+}
+
+#small-logo {
+    display: none;
+    max-width: 100%;
+}
+
+.ms_side-bar {
+    width: 200px;
+    height: 1000px;
+    background-image: url(sidebar-bg.png);
+    background-color: rgba(5,30,52,255);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .ms_container_centrale {
     display: flex;
-    flex-direction: column;
-    width: 60%;
-    flex-grow: 1;
-}
-
-.ms_table {
-    border: 1px solid grey;
-    margin: 10px;
-    height: auto;
-    border-radius: 10px;
-    width: 97%;
-}
-
-.ms_icon_table {
-    width: 20px;
-}
-
-.ms_action-table {
-    padding: 5px;
-    border: 1px solid rgba(128, 128, 128, 0.356);
-    border-radius: 10px;
-}
-
-.ms_todo_list {
-    border: 1px solid grey;
-    margin: 10px;
-    border-radius: 10px;
-    width: 30%;
-    height: 170px;
-}
-
-.ms_todo_list h2 {
-    border-bottom: 1px solid grey;
-    background-color: rgba(128, 128, 128, 0.134);
-    padding: 10px;
-}
-
-.checkbox_todo {
-    border: 1px solid grey;
-    padding: 5px;
-    margin: 5px;
-    border-radius: 10px;
-}
-
-/* mobile version */
-
-@media all and (max-width: 480px) {
-    .ms_sidebar {
-        width: 70px;
-    }
-
 }
 
 
+/* tablet version */
 
-
-/*tablet version*/
-
-@media all and (max-width: 780px) {
-    
-    #icon-grey {
-        display: none;
-    }
-
-    #big-logo {
+@media all and (max-width: 992px) {
+    #icon-grey, #big-logo {
         display: none;
     }
 
@@ -177,16 +109,18 @@ header a {
     }
 
     #ring-icon {
-        padding-right: 30px;
+        margin-right: 20px;
+        font-size: 20px;
     }
 
-    .ms_sidebar span {
-        display: none;
+
+}
+
+@media all and (max-width: 576px) {
+    #small-logo {
+        display: block;
+        height: 30px;
     }
 
-    .ms_container_centrale {
-        display: flex;
-        flex-wrap: wrap;
-    }
 
 }
