--- a/style.css
+++ b/style.css
@@ -103,10 +103,16 @@ li span {
 
 .ms_top_section_side li {
     padding: 10px 5px 5px 5px;
+    margin-right: 38px;
 }
 
 .ms_top_section_side {
     padding-top: 10px;
+}
+
+h5 {
+    color: black;
+    font-size: 20px;
 }
 
 .ms_bottom_section_side {
@@ -130,6 +136,22 @@ li span {
 
 #big-logo, #small-logo :hover {
     cursor: pointer;
+}
+
+.col-6 label {
+    color: black;
+}
+
+.col-12 label, h6 {
+    color: black;
+}
+
+.col-4 label {
+    color: black;
+}
+
+.col-2 label {
+    color: black;
 }
 
 /* tablet version */
